...
            android:elevation="@dimen/toolbar_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextView.Heading2.Toolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.fragment.app.FragmentContainerView
...
